docs: update and reorder experiences (Alphalink & KISAI)

--- a/index.html
+++ b/index.html
@@ -336,19 +336,7 @@
           <div class="main-content">
             <h2>Expérience professionnelle</h2>
             <div class="section">
-              <h3 class="item-title">Directeur Technique Infrastructure <span class="dates">Alphalink, Pornic – depuis Janvier 2024</span></h3>
-              <ul>
-                <li>Direction de la stratégie infrastructure et sécurité pour un opérateur télécom national.</li>
-                <li>Management d’équipes techniques pluridisciplinaires (systèmes, réseaux, datacenter, VoIP, sécurité).</li>
-                <li>Pilotage de projets de transformation et de modernisation des infrastructures : évolution du cœur de réseau MPLS, déploiement et conception de l’infrastructure de cybersécurité, virtualisation, automatisation.</li>
-                <li>Mise en place d’un process de gestion des changements structuré, avec animation d’un Change Advisory Board (CAB).</li>
-                <li>Optimisation des process, gestion des budgets et des fournisseurs.</li>
-                <li>Mise en place de politiques de sécurité et de conformité (ISO, RGPD).</li>
-                <li>Représentation technique auprès de la direction générale.</li>
-              </ul>
-            </div>
-            <div class="section">
-              <h3 class="item-title">Dirigeant / CTO – Conseil & Direction Technique <span class="dates">KISAI DG, SLU – Andorre – 2018 – Déc. 2023</span></h3>
+              <h3 class="item-title">Dirigeant / CTO – Conseil & Direction Technique <span class="dates">KISAI DG, SLU – Andorre – depuis 2018</span></h3>
               <ul>
                 <li>Conseil stratégique et opérationnel auprès de clients (opérateurs, intégrateurs, PME/ETI).</li>
                 <li>Direction technique en prestation pour des clients grands comptes et opérateurs.</li>
@@ -358,6 +346,18 @@
                 <li>Accompagnement du changement et gestion de la relation client au niveau direction.</li>
                 <li>Gestion de projets d’intégration d’infrastructures critiques, déploiement de datacenters, backbone opérateur, services FAI.</li>
                 <li>DSI externalisé pour plusieurs clients.</li>
+              </ul>
+            </div>
+            <div class="section">
+              <h3 class="item-title">Directeur Technique Infrastructure <span class="dates">Alphalink, Pornic – Janvier 2024 – Mai 2025</span></h3>
+              <ul>
+                <li>Direction de la stratégie infrastructure et sécurité pour un opérateur télécom national.</li>
+                <li>Management d’équipes techniques pluridisciplinaires (systèmes, réseaux, datacenter, VoIP, sécurité).</li>
+                <li>Pilotage de projets de transformation et de modernisation des infrastructures : évolution du cœur de réseau MPLS, déploiement et conception de l’infrastructure de cybersécurité, virtualisation, automatisation.</li>
+                <li>Mise en place d’un process de gestion des changements structuré, avec animation d’un Change Advisory Board (CAB).</li>
+                <li>Optimisation des process, gestion des budgets et des fournisseurs.</li>
+                <li>Mise en place de politiques de sécurité et de conformité (ISO, RGPD).</li>
+                <li>Représentation technique auprès de la direction générale.</li>
               </ul>
             </div>
             <div class="section">
@@ -454,19 +454,7 @@
           <div class="main-content">
             <h2>Professional Experience</h2>
             <div class="section">
-              <h3 class="item-title">Technical Director Infrastructure <span class="dates">Alphalink, Pornic – since January 2024</span></h3>
-              <ul>
-                <li>Directed infrastructure and security strategy for a national telecom operator.</li>
-                <li>Managed multidisciplinary technical teams (systems, networks, datacenter, VoIP, security).</li>
-                <li>Led transformation and modernization projects: MPLS core network evolution, deployment and design of cybersecurity infrastructure, virtualization, automation.</li>
-                <li>Established a structured change management process, including leading a Change Advisory Board (CAB).</li>
-                <li>Optimized processes, managed budgets and suppliers.</li>
-                <li>Implemented security and compliance policies (ISO, GDPR).</li>
-                <li>Technical representation with executive management.</li>
-              </ul>
-            </div>
-            <div class="section">
-              <h3 class="item-title">Founder / CTO – Consulting & Technical Leadership <span class="dates">KISAI DG, SLU – Andorra – 2018 – Dec. 2023</span></h3>
+              <h3 class="item-title">Founder / CTO – Consulting & Technical Leadership <span class="dates">KISAI DG, SLU – Andorra – since 2018</span></h3>
               <ul>
                 <li>Provided strategic and operational consulting to clients (telecom operators, integrators, SMEs/ETIs).</li>
                 <li>Served as technical director on assignment for major clients and operators.</li>
@@ -476,6 +464,18 @@
                 <li>Facilitated change management and client relations at executive level.</li>
                 <li>Oversaw critical infrastructure integration projects, datacenter deployment, operator backbone, ISP services.</li>
                 <li>Acted as outsourced CIO for several clients.</li>
+              </ul>
+            </div>
+            <div class="section">
+              <h3 class="item-title">Technical Director Infrastructure <span class="dates">Alphalink, Pornic – January 2024 – May 2025</span></h3>
+              <ul>
+                <li>Directed infrastructure and security strategy for a national telecom operator.</li>
+                <li>Managed multidisciplinary technical teams (systems, networks, datacenter, VoIP, security).</li>
+                <li>Led transformation and modernization projects: MPLS core network evolution, deployment and design of cybersecurity infrastructure, virtualization, automation.</li>
+                <li>Established a structured change management process, including leading a Change Advisory Board (CAB).</li>
+                <li>Optimized processes, managed budgets and suppliers.</li>
+                <li>Implemented security and compliance policies (ISO, GDPR).</li>
+                <li>Technical representation with executive management.</li>
               </ul>
             </div>
             <div class="section">
