docs: major update - AI Engineer profile, experience reordering, and updated PDF resumes

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
           </svg>
         </span>
       </button>
-      <a id="pdf-link" class="theme-toggle-btn" href="CV_Damien_GUESDON.pdf" download title="Télécharger le PDF">
+      <a id="pdf-link" class="theme-toggle-btn" href="CV_Damien_Guesdon_FR.pdf" download title="Télécharger le PDF">
         <span>
           <!-- SVG PDF -->
           <svg width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -283,23 +283,22 @@
               <a href="mailto:guesdondamien@free.fr">guesdondamien@free.fr</a> &nbsp;|&nbsp; +33 6 63 71 17 80 &nbsp;|&nbsp; Permis B
             </div>
           </div>
-          <img src="photo.jpg" alt="Damien GUESDON" crossorigin="anonymous">
+          <img src="photo.jpg" alt="Damien GUESDON">
         </div>
         <h2>Résumé professionnel</h2>
         <div>
-          <span id="xp"></span> ans d’expérience, reconnu pour le pilotage d’équipes, la direction de projets stratégiques et l’architecture d’infrastructures complexes et sécurisées. Forte expertise dans la transformation numérique, l’optimisation des coûts et la sécurisation des systèmes d’information. Sens aigu de la qualité de service et capacité à fédérer et faire évoluer les équipes vers l’excellence opérationnelle. Ouvert aux opportunités de Directeur Technique, DSI ou CTO pour accompagner la croissance et l’innovation d’une organisation.
+          Expertise de plus de <span id="xp"></span> ans combinant direction technique (CTO/DSI) et ingénierie IA. Reconnu pour le pilotage d’équipes et la mise en œuvre de stratégies technologiques complexes, j'accompagne désormais les organisations dans leur transition vers l'intelligence artificielle : du cadrage stratégique (ROI, roadmaps) au déploiement opérationnel (RAG, MLOps, LLM). Expert en infrastructures sécurisées et transformation numérique, je fédère les talents pour transformer l'innovation en valeur métier concrète. Ouvert aux opportunités de Directeur Technique, DSI ou CTO pour accompagner la croissance et l’innovation d’une organisation.
         </div>
         <div class="cv-flex">
           <aside>
             <h2>Compétences clés</h2>
             <ul>
-              <li>Direction technique & stratégie IT</li>
-              <li>Management & leadership</li>
-              <li>Gestion de projet</li>
-              <li>Architecture systèmes & réseaux</li>
-              <li>Cybersécurité</li>
-              <li>Innovation & veille technologique</li>
-              <li>Relation client & communication</li>
+              <li><strong>Stratégie IA :</strong> Cadrage ROI, roadmaps PoC vers Prod, Gouvernance & Éthique (RGPD).</li>
+              <li><strong>IA Générative :</strong> Systèmes RAG, Agents autonomes (LangGraph), Fine-tuning (LoRA).</li>
+              <li><strong>MLOps :</strong> Automatisation CI/CD, Airflow, tracking MLflow, monitoring (Data Drift).</li>
+              <li><strong>IA/ML Core :</strong> Deep Learning (PyTorch), Reinforcement Learning, Transformers.</li>
+              <li><strong>Architecture IT :</strong> Cloud Azure, Vector DB, System Design & Cybersécurité.</li>
+              <li><strong>Leadership :</strong> Direction technique (20 ans XP), management & reporting COMEX.</li>
             </ul>
             <h2>Langues</h2>
             <ul>
@@ -310,6 +309,10 @@
               <li>Japonais : Initiation</li>
             </ul>
             <h2>Formation</h2>
+            <div class="section">
+              <strong>AI Engineer</strong>, OpenClassrooms, 2026<br>
+              Titre RNCP 39775 (Niveau 7) : Expert en ingénierie et science des données
+            </div>
             <div class="section">
               <strong>BTS TSGRI</strong> (Niveau III), Créteil (94), 2005-2006<br>
               Technicien Supérieur Gestionnaire de Ressources Informatiques
@@ -325,27 +328,18 @@
             <div class="section">
               <strong>Bac S, spécialité mathématiques</strong>, Lamballe (22), 1996
             </div>
-            <h2>Centres d’intérêt</h2>
-            <ul>
-              <li>Innovation technologique, veille IT, transformation digitale</li>
-              <li>Intelligence Artificielle</li>
-              <li>Ludothèque, escape games, géocaching</li>
-              <li>Voyages, gastronomie, ski, randonnée, nautisme</li>
-            </ul>
           </aside>
           <div class="main-content">
             <h2>Expérience professionnelle</h2>
             <div class="section">
               <h3 class="item-title">Dirigeant / CTO – Conseil & Direction Technique <span class="dates">KISAI DG, SLU – Andorre – depuis 2018</span></h3>
               <ul>
-                <li>Conseil stratégique et opérationnel auprès de clients (opérateurs, intégrateurs, PME/ETI).</li>
-                <li>Direction technique en prestation pour des clients grands comptes et opérateurs.</li>
-                <li>Définition et mise en œuvre de feuilles de route IT, transformation digitale, cybersécurité.</li>
-                <li>Supervision de projets d’envergure : refonte réseaux, automatisation, supervision.</li>
-                <li>Encadrement et montée en compétence des équipes techniques.</li>
-                <li>Accompagnement du changement et gestion de la relation client au niveau direction.</li>
-                <li>Gestion de projets d’intégration d’infrastructures critiques, déploiement de datacenters, backbone opérateur, services FAI.</li>
-                <li>DSI externalisé pour plusieurs clients.</li>
+                <li>Conseil stratégique en IA et IT : Cadrage, roadmaps de transformation et évaluation du ROI.</li>
+                <li>Conception et mise en œuvre de solutions d’IA Générative (systèmes RAG, agents autonomes) et de pipelines MLOps.</li>
+                <li>Direction technique (CTO as a Service) pour opérateurs et grands comptes.</li>
+                <li>Pilotage de la stratégie cybersécurité et conformité RGPD des systèmes d'information.</li>
+                <li>Supervision de projets d’infrastructure critique : backbone opérateur, datacenters et réseaux sécurisés.</li>
+                <li>DSI externalisé pour plusieurs clients et accompagnement du changement au niveau direction.</li>
               </ul>
             </div>
             <div class="section">
@@ -401,23 +395,22 @@
               <a href="mailto:guesdondamien@free.fr">guesdondamien@free.fr</a> | +33 6 63 71 17 80 | Driving License
             </div>
           </div>
-          <img src="photo.jpg" alt="Damien GUESDON" crossorigin="anonymous">
+          <img src="photo.jpg" alt="Damien GUESDON">
         </div>
         <h2>Professional Summary</h2>
         <div>
-          <span id="xp-en"></span> years of experience, recognized for leading teams, managing strategic projects, and architecting complex and secure infrastructures. Strong expertise in digital transformation, cost optimization, and information systems security. Highly committed to service quality, with a proven ability to unite and develop teams towards operational excellence. Open to CTO, CIO, or Technical Director opportunities to support organizational growth and innovation.
+          Over <span id="xp-en"></span> years of expertise bridging Technical Leadership (CTO/CIO) and AI Engineering. Proven track record in leading teams and executing complex IT strategies, now empowering organizations through their AI transition: from strategic scoping (ROI, roadmaps) to operational deployment (RAG, MLOps, LLM). Expert in secure infrastructure and digital transformation, I unite teams to turn technological innovation into tangible business value. Open to CTO, CIO, or Technical Director opportunities to support organizational growth and innovation.
         </div>
         <div class="cv-flex">
           <aside>
             <h2>Key Skills</h2>
             <ul>
-              <li>Technical leadership & IT strategy</li>
-              <li>Team management & leadership</li>
-              <li>Project management</li>
-              <li>Systems & network architecture</li>
-              <li>Cybersecurity</li>
-              <li>Innovation & technology watch</li>
-              <li>Client relations & communication</li>
+              <li><strong>AI Strategy:</strong> ROI assessment, PoC to Prod roadmaps, AI Governance (GDPR).</li>
+              <li><strong>Generative AI:</strong> RAG systems, Autonomous Agents (LangGraph), LLM Fine-tuning.</li>
+              <li><strong>MLOps:</strong> AI CI/CD pipelines, Airflow, MLflow tracking, Drift monitoring.</li>
+              <li><strong>AI/ML Core:</strong> Deep Learning (PyTorch), Reinforcement Learning, Transformers.</li>
+              <li><strong>IT Architecture:</strong> Azure Cloud, Vector DBs, System Design & Cybersecurity.</li>
+              <li><strong>Leadership:</strong> Technical Direction (20y XP), management & Executive reporting.</li>
             </ul>
             <h2>Languages</h2>
             <ul>
@@ -428,6 +421,10 @@
               <li>Japanese: Beginner</li>
             </ul>
             <h2>Education</h2>
+            <div class="section">
+              <strong>Master of Science in AI Engineering</strong>, OpenClassrooms (U.S. Accredited University), 2026<br>
+              Specialization: Data Science and Machine Learning Operations
+            </div>
             <div class="section">
               <strong>Higher Technical Diploma (BTS) in IT Resource Management</strong>, Créteil, France, 2005-2006<br>
               (BTS TSGRI – “Technicien Supérieur Gestionnaire de Ressources Informatiques”)
@@ -443,27 +440,18 @@
             <div class="section">
               <strong>Scientific Baccalaureate, Mathematics Major</strong>, Lamballe, France, 1996
             </div>
-            <h2>Interests</h2>
-            <ul>
-              <li>Technology innovation, IT watch, digital transformation</li>
-              <li>Artificial Intelligence</li>
-              <li>Board games, escape rooms, geocaching</li>
-              <li>Travel, gastronomy, skiing, hiking, boating</li>
-            </ul>
           </aside>
           <div class="main-content">
             <h2>Professional Experience</h2>
             <div class="section">
               <h3 class="item-title">Founder / CTO – Consulting & Technical Leadership <span class="dates">KISAI DG, SLU – Andorra – since 2018</span></h3>
               <ul>
-                <li>Provided strategic and operational consulting to clients (telecom operators, integrators, SMEs/ETIs).</li>
-                <li>Served as technical director on assignment for major clients and operators.</li>
-                <li>Defined and implemented IT roadmaps, digital transformation, cybersecurity.</li>
-                <li>Supervised large-scale projects: network redesign, automation, monitoring.</li>
-                <li>Managed and developed technical teams.</li>
-                <li>Facilitated change management and client relations at executive level.</li>
-                <li>Oversaw critical infrastructure integration projects, datacenter deployment, operator backbone, ISP services.</li>
-                <li>Acted as outsourced CIO for several clients.</li>
+                <li>Strategic AI & IT Consulting: Scoping, transformation roadmaps, and ROI assessment.</li>
+                <li>Design and implementation of Generative AI solutions (RAG systems, autonomous agents) and MLOps pipelines.</li>
+                <li>Technical Direction (CTO-as-a-Service) for major accounts and telecom operators.</li>
+                <li>Leadership of cybersecurity strategy and GDPR compliance for information systems.</li>
+                <li>Oversight of critical infrastructure projects: operator backbone and secure networks.</li>
+                <li>Outsourced CIO for several clients and change management at executive level.</li>
               </ul>
             </div>
             <div class="section">
@@ -546,12 +534,12 @@
       var pdfLink = document.getElementById('pdf-link');
       if (pdfLink) {
         if (lang === 'fr') {
-          pdfLink.href = 'CV_Damien_GUESDON.pdf';
-          pdfLink.download = 'CV_Damien_GUESDON.pdf';
+          pdfLink.href = 'CV_Damien_Guesdon_FR.pdf';
+          pdfLink.download = 'CV_Damien_Guesdon_FR.pdf';
           pdfLink.title = 'Télécharger le PDF';
         } else {
-          pdfLink.href = 'Damien_GUESDON_Resume.pdf';
-          pdfLink.download = 'Damien_GUESDON_Resume.pdf';
+          pdfLink.href = 'Resume_Damien_Guesdon_EN.pdf';
+          pdfLink.download = 'Resume_Damien_Guesdon_EN.pdf';
           pdfLink.title = 'Download PDF';
         }
       }
